<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar"/>

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"/>


    <LinearLayout
        android:id="@+id/parent_ll"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/profile_pic_default" />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <EditText
                android:layout_weight="1"
                android:id="@+id/user_phone"
                android:layout_gravity="center"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

            <Button
                android:layout_weight="1"
                android:text="@string/send_otp"
                android:id="@+id/phone_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progress_bar"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ProgressBar>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>