<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginParentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/saksham_bg"
    tools:context="com.samagra.ancillaryscreens.screens.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight=".42"
            android:background="@drawable/login_box_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login"
                android:layout_margin="4dp"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:layout_marginTop="4dp"
                android:paddingRight="16dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColorHint="@color/white"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/white"
                    app:passwordToggleEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusLeft="@+id/login_password"
                        android:nextFocusRight="@+id/login_password"
                        android:nextFocusUp="@+id/login_password"
                        android:nextFocusDown="@+id/login_password"
                        android:paddingLeft="6dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:layout_margin="0dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="6dp"
                        android:paddingEnd="36dp"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pwdLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/white"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingLeft="6dp"
                        app:endIconMode="password_toggle"
                        android:drawablePadding="40dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="6dp"
                        android:paddingEnd="36dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/login_submit"
                android:layout_width="265dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:layout_marginTop="14dp"
                android:textColor="@android:color/black" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:orientation="vertical">
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>